--- a/package.json
+++ b/package.json
@@ -13,21 +13,16 @@
     "nickname",
     "fun"
   ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/sdimkov/hubot-nickname"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://raw.github.com/sdimkov/hubot-nickname/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sdimkov/hubot-nickname/issues"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "https://github.com/sdimkov/hubot-nickname",
   "readmeFilename": "README.md"
